Resolve compilation errors in EnemyPlane and LevelOne
- Added `BASE_FIRE_RATE` and `BASE_ENEMY_SPAWN_PROBABILITY` constants to
`LevelParent`.
- Refactored `EnemyPlane` to include and initialize the
`difficultyFactor` field.
- Added `getDifficultyFactor()` method to `EnemyPlane` for consistent
access to the difficulty factor.
- Updated `LevelOne` to use `BASE_ENEMY_SPAWN_PROBABILITY` from
`LevelParent`.
- Fixed timeline and scene initialization issues in `LevelParent` for
smoother transitions.
- Refactored projectile firing logic in `EnemyPlane` to calculate
adjusted fire rate dynamically.
- Added comments for clarity and improved readability in affected files.

These changes address compiler errors and improve code maintainability.